src/main/java/com/example/rankomat/error/RecordIsAlreadyProcessed.java
package com.example.rankomat.error;

public class RecordIsAlreadyProcessed extends RuntimeException {
    public RecordIsAlreadyProcessed(String message) {
        super(message);
    }
}
